# rfact

./: Cargo.toml  README.md
src/: fact.rs  main.rs
